# conan-rtklib

./: CMakeLists.txt  README.md  conandata.yml  conanfile.py
patches/2.4.3-b34/: 0001-remove-useless-export.patch
test_package/: test_package.cpp
